Align & Fix tests to PE